Allow attached properties in path expressions (#25)